--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.5.0",
+    "prop-types": "15.7.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-router-dom": "5.1.2",
     "react-scripts": "3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "lint": "./node_modules/eslint/bin/eslint.js src/"
   },
   "eslintConfig": {
     "extends": "react-app"
