--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.5.0",
     "@material-ui/icons": "^4.4.3",
+    "eslint": "6.5.1",
     "leaflet": "^1.5.1",
     "prop-types": "15.7.2",
     "react": "^16.10.2",
@@ -12,6 +13,16 @@
     "react-router-dom": "5.1.2",
     "react-scripts": "3.2.0",
     "react-leaflet": "^2.4.0"
+  },
+  "devDependencies": {
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-react-app": "^5.0.2",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.16.0"
+  },
+  "dependenciesComments": {
+    "eslint-plugin-jsx-a11y": "Keep in ^5.1.1 version to avoid warnings"
   },
   "scripts": {
     "start": "react-scripts start",
