--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^16.10.2",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.2.0",
-    "react-leaflet": "^2.4.0"
+    "react-leaflet": "^2.4.0",
+    "react-masonry-component": "^6.2.1"
   },
   "devDependencies": {
     "eslint-config-airbnb": "^18.0.1",
