Eslint configuration and adjusting previous files

--- a/package.json
+++ b/package.json
@@ -3,21 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.5.0",
-    "@material-ui/icons": "^4.4.3",
+    "@material-ui/core": "^4.5.1",
+    "@material-ui/icons": "^4.5.1",
     "@vx/event": "^0.0.192",
     "@vx/group": "0.0.192",
+    "@vx/responsive": "0.0.192",
     "@vx/scale": "0.0.192",
     "@vx/shape": "0.0.192",
+    "@vx/tooltip": "0.0.192",
     "eslint": "6.5.1",
     "leaflet": "^1.5.1",
     "prop-types": "15.7.2",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-leaflet": "^2.5.0",
+    "react-masonry-component": "^6.2.1",
     "react-router-dom": "5.1.2",
-    "react-scripts": "3.2.0",
-    "react-leaflet": "^2.4.0",
-    "react-masonry-component": "^6.2.1"
+    "react-scripts": "3.2.0"
   },
   "devDependencies": {
     "eslint-config-airbnb": "^18.0.1",
@@ -34,7 +36,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "./node_modules/eslint/bin/eslint.js src/"
+    "lint": "npx eslint src"
   },
   "eslintConfig": {
     "extends": "react-app"
