--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vx/scale": "0.0.192",
     "@vx/shape": "0.0.192",
     "@vx/tooltip": "0.0.192",
+    "axios": "0.19.0",
     "eslint": "6.5.1",
     "leaflet": "^1.5.1",
     "prop-types": "15.7.2",
