--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-leaflet": "^2.5.0",
     "react-masonry-component": "^6.2.1",
     "react-router-dom": "5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-select": "^3.0.8"
   },
   "devDependencies": {
     "eslint-config-airbnb": "^18.0.1",
