--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^16.11.0",
     "react-google-charts": "^3.0.15",
     "react-leaflet": "^2.5.0",
+    "react-load-script": "0.0.6",
     "react-masonry-component": "^6.2.1",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.2.0",
