--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "npx eslint src"
+    "lint": "npx eslint src --ext .js,.jsx"
   },
   "eslintConfig": {
     "extends": "react-app"
