solve problem with lint sript

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,9 @@
   "extends": "airbnb",
   "parser": "babel-eslint",
   "rules": {
-    "react/forbid-prop-types": "off"
+    "react/forbid-prop-types": "off",
+    //Something was broken in bable-eslint 10.0.3 required by react-scripts (specific version)
+    "template-curly-spacing" : "off",
+    "indent": "off"
   }
 }
